# LightController

./: LICENSE  README.md
CircuitBoard/: .gitignore  CombinedBOM.bom
CircuitBoard/ControllerPCB/: Controller.bom  Controller.kicad_pcb  Controller.pro  Controller.sch  ControllerG.bom  fp-lib-table  sym-lib-table
CircuitBoard/ProjectParts.pretty/: RotaryEncoder_EN12-VS11AF18.kicad_mod
Documentation/: BlockDiagramm.drawio  Light Controller.md  WebGuiProposal.epgz
Firmware/: .clang-format  .gitignore  CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
Firmware/components/LightEffect/: CMakeLists.txt  Color.cpp  LightEffect.cpp  Macro.cpp  Macro.h  Processor.cpp  Processor.h  Sequecer.cpp  SequenceStepper.cpp  Sequencer.cpp  StateMachine.cpp  StateMachine.h  Waveforms.cpp  Waveforms.h
Firmware/components/LightEffect/include/: Basics.h  Color.h  Macro.h  Processor.h  SequenceStepper.h  Sequencer.h  StateMachine.h
Firmware/components/LightEffect/includes/: Basics.h  Color.h  LightEffect.h  Macro.h  SequenceStepper.h  Sequencer.h  StateMachine.h  Waveforms.h
Firmware/components/MyHal/: AdcPort.cpp  CMakeLists.txt  DacPort.cpp  GpioPort.cpp  I2cPort.cpp  PwmPort.cpp  RmtPort.cpp  SpiPort.cpp  UartPort.cpp  ir_parser_rmt_rc5.c  ir_tools.h
Firmware/components/MyHal/includes/: AdcPort.h  DacPort.h  GpioPort.h  I2cPort.h  MyHal.h  PortBase.h  PwmPort.h  RmtPort.h  SpiPort.h  UartPort.h
Firmware/components/MyHal/private/: iAdcInclude.h  iDacInclude.h  iGpioInclude.h  iI2cInclude.h  iPwmInclude.h  iRmtInclude.h  iSpiInclude.h  iUartInclude.h
Firmware/components/MyWeb/: CMakeLists.txt  ColorPosts.cpp  GetFileList.c  MappingParser.cpp  MyWeb.cpp  ProcessHandler.cpp  SourceReader.cpp
Firmware/components/MyWeb/WebParts/: CommonStyles.css  RgbiControl.html  ServerMock.py  index.html
Firmware/components/MyWeb/includes/: ApiDataTypes.h  ColorPosts.h  MyWeb.h
Firmware/components/MyWeb/private/: GetFileList.h  MappingParser.h  ProcessHandler.h  WebUtils.h
Firmware/factoryCfg/: Device.json  DeviceSetup.json  IOConfiguration.json
Firmware/factoryCfg.Default/: DeviceConfig.json  DeviceSetup.json
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  LightController_main.cpp  PcbHardware.h
Firmware/serverPages/: CommonScripts.js  CommonStyles.css  Debug.html  DebugApp.js  DemoPage.html  GrayControl.html  RgbSetupFull.html  RgbSingleControl.html  RgbwControl.html  ServerMock.py  ServicePage.html  (+14 more)
Firmware/unitTests/Devices/: CMakeLists.txt  TestMain.cpp
Firmware/unitTests/Devices/hwMock/: CMakeLists.txt  Color.h  GpioPort.h  I2cPort.h  PwmPort.h  RmtPort.h  SpiPort.h  _includes.h  common.cpp  esp_log.h  unistd.h
Firmware/unitTests/Devices/parts/: CMakeLists.txt
Firmware/unitTests/Devices/parts/Apa102Tests/: CMakeLists.txt  apa102Test.cpp
Firmware/unitTests/Devices/parts/EncoderTests/: CMakeLists.txt  encoderTest.cpp
Firmware/unitTests/Devices/parts/Pca9685Tests/: CMakeLists.txt  pca9685Test.cpp
Firmware/unitTests/Devices/parts/RgbwStripTests/: CMakeLists.txt  rgbwStripTest.cpp
Firmware/unitTests/Devices/parts/WS2812Tests/: CMakeLists.txt  ws2812Test.cpp
Firmware/unitTests/FileSystem/: .gitignore  CMakeLists.txt  ReaderMock.cpp  TestMain.cpp  myFsTestConfig.json
Firmware/unitTests/FileSystem/cJSON/: CMakeLists.txt  cJSON.h
Firmware/unitTests/FileSystem/espMock/: esp_event.h  esp_intr_alloc.h  esp_netif.h  http_parser.h
Firmware/unitTests/FileSystem/include/: TestUtils.h
Firmware/unitTests/FileSystem/parts/: ParseFileTest.cpp
Firmware/unitTests/MainApp/: CMakeLists.txt  TestMain.cpp
Firmware/unitTests/MainApp/deviceMock/: Apa102.h  CMakeLists.txt  Pca9685.h  RgbwStrip.h  Ws2812.h
Firmware/unitTests/MainApp/espMock/: common.cpp
Firmware/unitTests/MainApp/include/: TestUtils.h
Firmware/unitTests/MainApp/parts/: ChannelIndexesTests.cpp  DeviceDriverTests.cpp  RotatingIndexTests.cpp
Firmware/unitTests/MyHal/: .gitignore  CMakeLists.txt  Report.txt  TestMain.cpp
Firmware/unitTests/MyHal/espMock/: CMakeLists.txt  esp_err.h  esp_system.h
Firmware/unitTests/MyHal/espMock/driver/: adc.h  adc_common.h  dac.h  gpio.h  i2c.h  ledc.h  periph_ctrl.h  rmt.h  spi_common.h  spi_master.h  uart.h
Firmware/unitTests/MyHal/espMock/freertos/: FreeRTOS.h
Firmware/unitTests/MyHal/espMock/hal/: adc_types.h  dac_types.h  esp_bit_defs.h  gpio_caps.h  gpio_types.h  i2c_types.h  ledc_types.h  rmt_types.h  spi_types.h  uart_types.h
Firmware/unitTests/MyHal/include/: CMakeLists.txt
Firmware/unitTests/MyHal/parts/: CMakeLists.txt
Firmware/unitTests/MyHal/parts/AdcTests/: CMakeLists.txt  adcMock.cpp  adcTest.cpp  iAdcInclude.h
Firmware/unitTests/MyHal/parts/DacTests/: CMakeLists.txt  dacMock.cpp  dacTest.cpp  iDacInclude.h
Firmware/unitTests/MyHal/parts/GpioTests/: CMakeLists.txt  gpioMock.cpp  gpioTest.cpp  iGpioInclude.h
Firmware/unitTests/MyHal/parts/I2cTests/: CMakeLists.txt  i2cMock.cpp  i2cTest.cpp  iI2cInclude.h
Firmware/unitTests/MyHal/parts/PwmTests/: CMakeLists.txt  iPwmInclude.h  pwmMock.cpp  pwmTest.cpp
Firmware/unitTests/MyHal/parts/RmtTests/: CMakeLists.txt  iRmtInclude.h  rmtMock.cpp  rmtTest.cpp
Firmware/unitTests/MyHal/parts/SpiTests/: CMakeLists.txt  iSpiInclude.h  spiMock.cpp  spiTest.cpp
Firmware/unitTests/MyHal/parts/UartTests/: CMakeLists.txt  iUartInclude.h  uartMock.cpp  uartTest.cpp
Firmware/unitTests/MyWeb/: CMakeLists.txt  ReaderMock.cpp  TestMain.cpp
Firmware/unitTests/MyWeb/espMock/: CMakeLists.txt  common.cpp  esp_attr.h  esp_http_server.h  esp_spiffs.h  esp_system.h
Firmware/unitTests/MyWeb/espMock/freertos/: FreeRTOS.h
Firmware/unitTests/MyWeb/include/: CMakeLists.txt
Firmware/unitTests/MyWeb/parts/: CMakeLists.txt  DeviceSetup.json  GetRequestTests.cpp  MappingParserTests.cpp  ParseApplyToStringTests.cpp  SaveLoadPageTest.cpp  SetRequestTests.cpp  TestInput.json  colorPostsTest.cpp  parseFileTest.cpp  testInclude.h
Firmware/unitTests/MyWeb/parts/ProcessHandlerTests/: CMakeLists.txt  SetRequestTests.cpp
Firmware/unitTests/MyWeb/parts/ReadingConfigTests/: CMakeLists.txt  parseFileTest.cpp
(+59 files in other folders)
