idf_component_register(SRCS 
            "Color.cpp" 
            "Macro.cpp" 
            "Processor.cpp" 
            "Sequencer.cpp" 
            "SequenceStepper.cpp" 
            "StateMachine.cpp" 
            "Waveforms.cpp" 
            INCLUDE_DIRS "include"
            # REQUIRES 
            )
