idf_component_register(SRCS  "MyWeb.cpp"
                        "ColorPosts.cpp" "ProcessHandler.cpp"
                       INCLUDE_DIRS "includes" "private"
                       REQUIRES nvs_flash esp_http_server MyConnect LightEffect json
                       EMBED_FILES "WebParts/index.html"
                       "WebParts/RgbSetupFull.html" 
                       "WebParts/GrayControl.html" 
                       "WebParts/RgbiControl.html" 
                       "WebParts/RgbwControl.html" 
                       "WebParts/RgbSingleControl.html" 
                       "WebParts/CommonScripts.js" 
                       "WebParts/CommonStyles.css"
                       "WebParts/WiFiConnectInput.html"
                       "WebParts/favicon.ico"
                       )